--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "axios": "^1.7.0",
     "concurrently": "^8.2.2",
     "core-js": "^3.8.3",
+    "json-server": "^1.0.0-beta.0",
+    "netlify-lambda": "^2.0.16",
     "roboto-fontface": "*",
     "vue": "^3.2.13",
     "vue-router": "^4.3.2",
